Fixed spacing on landing page

--- a/site/web/app/themes/sage/assets/styles/layouts/_footer.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_footer.scss
@@ -3,10 +3,12 @@
 }
 
 .content-info {
+  margin-top: 10px;
   height: 80px;
-  background-color: #6da2a3
+  background-color: #353535;
 }
 
-.p {
+.navbar-brand {
   color: #fff;
+  float: none;
 }
